Add new input field for YouTube video title

--- a/Auto Opened Site/popup.html
+++ b/Auto Opened Site/popup.html
@@ -21,6 +21,10 @@
             <label for="triggerSite" class="block text-sm font-medium text-gray-700">When I visit this site:</label>
             <input type="text" id="triggerSite" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Enter the site URL">
          </div>
+         <div>
+            <label for="triggerSite" class="block text-sm font-medium text-gray-700">Or a YouTube video title contains:</label>
+            <input type="text" id="ytSite" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="e.g., 'Crash Course Economics'">
+         </div>
 
         <!-- Destination Site Input-->
          <div>
