--- a/Auto Opened Site/popup.html
+++ b/Auto Opened Site/popup.html
@@ -4,7 +4,8 @@
   <!-- The "thinking" part of the page goes here -->
    <title>Auto Opened Site</title>
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-   <script src="https://cdn.tailwindcss.com"></script>
+   <script src="lib/tailwind.js"></script>
+   <script src="popup.js" defer></script>
    <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -14,7 +15,7 @@
 </head>
 <body class="p-4 bg-gray-50">
   <!-- The visible content of the page goes here -->
-   <div class="space-y-4"> <!-- This class adds space between all the items inside -->
+   <div id="inputUI" class="space-y-4"> <!-- This class adds space between all the items inside -->
         <h1 class="text-xl font-semibold text-gray-800">Auto Opened Site</h1>
         <!-- Trigger Site Input-->
          <div>
@@ -36,8 +37,11 @@
          <div>
             <button id="saveButton" class="w-full bg-blue-600 text-white font-medium py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">Save</button>
          </div>
-         <div id=""status" class="text-sm text-gray-600"></div>
+         <div id="status" class="text-sm text-gray-600"></div>
    </div>
-   <script src="popup.js"></script>
+   <div id="finishUI" class="hidden space-y-4">
+        <h1 class="text-xl font-semibold text-gray-800">Setup Complete</h1>
+        <p class="text-sm text-gray-600">Your site will now automatically open when you visit the specified URL or a YouTube video with the specified title.</p>
+   </div>
 </body>
 </html>
