fix problem of finish ui didnt work accordingly

--- a/Auto Opened Site/popup.html
+++ b/Auto Opened Site/popup.html
@@ -10,6 +10,7 @@
         body {
             font-family: 'Inter', sans-serif;
             width: 360px;
+            min-height: 250px; /* Ensures the body height fits its content */
         }
    </style>
 </head>
@@ -37,9 +38,8 @@
          <div>
             <button id="saveButton" class="w-full bg-blue-600 text-white font-medium py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">Save</button>
          </div>
-         <div id="status" class="text-sm text-gray-600"></div>
    </div>
-   <div id="finishUI" class="hidden space-y-4">
+   <div id="finishUI" class="space-y-4" hidden>
         <h1 class="text-xl font-semibold text-gray-800">Setup Complete</h1>
         <p class="text-sm text-gray-600">Your site will now automatically open when you visit the specified URL or a YouTube video with the specified title.</p>
    </div>
