--- a/Auto Opened Site/popup.html
+++ b/Auto Opened Site/popup.html
@@ -38,6 +38,7 @@
          <div>
             <button id="saveButton" class="w-full bg-blue-600 text-white font-medium py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">Save</button>
          </div>
+         <div id=""status" class="text-sm text-gray-600"></div>
    </div>
    <div id="finishUI" class="space-y-4" hidden>
         <h1 class="text-xl font-semibold text-gray-800">Setup Complete</h1>
